--- a/Dve_Medel.ipynb
+++ b/Dve_Medel.ipynb
@@ -2204,6 +2204,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decision Tree Regression \n",
+      "Scores: [65436.91694813 70891.49165298 69409.83365342 70516.64411637\n",
+      " 72586.43609479 67681.84288996 66599.55377543 68030.13822837\n",
+      " 64251.15615321 70264.44062709]\n",
+      "Mean: 68566.84541397457\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score \n",
+    "\n",
+    "scores = cross_val_score (tree_reg, housing_prepared_df,df_label,scoring='neg_mean_squared_error',cv=10)\n",
+    "trees_rmse_scores = np.sqrt(-scores)\n",
+    "\n",
+    "def display_Scores(scores,model_name):\n",
+    "    print(model_name)\n",
+    "    print(\"Scores:\",scores)\n",
+    "    print('Mean:',scores.mean())\n",
+    "\n",
+    "display_Scores(trees_rmse_scores,\"decision Tree Regression \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'line_rmse_scores' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[49], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m lin_scores \u001b[38;5;241m=\u001b[39m cross_val_score (Linear_Object, housing_prepared_df,df_label,scoring\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneg_mean_squared_error\u001b[39m\u001b[38;5;124m'\u001b[39m,cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      2\u001b[0m lin_rmse_scores \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m-\u001b[39mlin_scores)\n\u001b[1;32m----> 3\u001b[0m display_Scores(\u001b[43mline_rmse_scores\u001b[49m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecision Tree Regression \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'line_rmse_scores' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "lin_scores = cross_val_score (Linear_Object, housing_prepared_df,df_label,scoring='neg_mean_squared_error',cv=10)\n",
+    "lin_rmse_scores = np.sqrt(-lin_scores)\n",
+    "display_Scores(line_rmse_scores,\"decision Tree Regression \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
