--- a/Dve_Medel.ipynb
+++ b/Dve_Medel.ipynb
@@ -2235,25 +2235,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'line_rmse_scores' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[49], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m lin_scores \u001b[38;5;241m=\u001b[39m cross_val_score (Linear_Object, housing_prepared_df,df_label,scoring\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneg_mean_squared_error\u001b[39m\u001b[38;5;124m'\u001b[39m,cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[0;32m      2\u001b[0m lin_rmse_scores \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m-\u001b[39mlin_scores)\n\u001b[1;32m----> 3\u001b[0m display_Scores(\u001b[43mline_rmse_scores\u001b[49m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecision Tree Regression \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'line_rmse_scores' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear Regression \n",
+      "Scores: [65000.67382615 70960.56056304 67122.63935124 66089.63153865\n",
+      " 68402.54686442 65266.34735288 65218.78174481 68525.46981754\n",
+      " 72739.87555996 68957.34111906]\n",
+      "Mean: 67828.38677377408\n"
      ]
     }
    ],
    "source": [
     "lin_scores = cross_val_score (Linear_Object, housing_prepared_df,df_label,scoring='neg_mean_squared_error',cv=10)\n",
     "lin_rmse_scores = np.sqrt(-lin_scores)\n",
-    "display_Scores(line_rmse_scores,\"decision Tree Regression \")"
+    "display_Scores(lin_rmse_scores,\"linear Regression \")"
    ]
   },
   {
