--- a/Dev_Model.ipynb
+++ b/Dev_Model.ipynb
@@ -2347,6 +2347,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63218.501739086045 {'max_features': 2, 'n_estimators': 3}\n",
+      "59780.92803356142 {'max_features': 2, 'n_estimators': 4}\n",
+      "58407.72298960135 {'max_features': 2, 'n_estimators': 6}\n",
+      "55070.991637234976 {'max_features': 2, 'n_estimators': 10}\n",
+      "52539.51387241943 {'max_features': 2, 'n_estimators': 30}\n",
+      "58645.63362785037 {'max_features': 6, 'n_estimators': 3}\n",
+      "57086.28647899343 {'max_features': 6, 'n_estimators': 4}\n",
+      "54361.30062136836 {'max_features': 6, 'n_estimators': 6}\n",
+      "52216.03746966316 {'max_features': 6, 'n_estimators': 10}\n",
+      "49875.512216289615 {'max_features': 6, 'n_estimators': 30}\n",
+      "59019.98729089905 {'max_features': 8, 'n_estimators': 3}\n",
+      "56125.7840581893 {'max_features': 8, 'n_estimators': 4}\n",
+      "54583.109845170846 {'max_features': 8, 'n_estimators': 6}\n",
+      "51635.19780950474 {'max_features': 8, 'n_estimators': 10}\n",
+      "49929.40792833153 {'max_features': 8, 'n_estimators': 30}\n",
+      "59162.15623145515 {'max_features': 15, 'n_estimators': 3}\n",
+      "56946.46612271611 {'max_features': 15, 'n_estimators': 4}\n",
+      "54867.439374469854 {'max_features': 15, 'n_estimators': 6}\n",
+      "52890.00634635138 {'max_features': 15, 'n_estimators': 10}\n",
+      "50830.86264815484 {'max_features': 15, 'n_estimators': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find combining all param  \n",
+    "\n",
+    "result = grid_search.cv_results_\n",
+    "for mean_score, params in zip(result['mean_test_score'],result['params']):\n",
+    "    print(np.sqrt(-mean_score),params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
