final test model

--- a/Dev_Model.ipynb
+++ b/Dev_Model.ipynb
@@ -2387,10 +2387,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Matin\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:493: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "49679.495566845755"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test model on the test set \n",
+    "final_model = grid_search.best_estimator_\n",
+    "X = Test_data_model.drop('median_house_value',axis=1)\n",
+    "y = Test_data_model['median_house_value'].copy()\n",
+    "\n",
+    "X_prepared = full_pipeline.transform(X)\n",
+    "final_predictions = final_model.predict(X_prepared)\n",
+    "final_mse = mean_squared_error(y,final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "final_rmse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test 2 : 49931.78793727492\n",
+    "# test 3 : 49679.495566845755"
+   ]
   }
  ],
  "metadata": {
